JG-2004-04-22-0: Enhancem.: Allow the mixed use of binaries with dynamic and 
                            static spooling. 
                            aimk.site contains a rule to switch to static 
                            spooling for platforms that don't support dynamic 
                            loading of libraries (HP11).
                 Review:    AS, MD

AH-2004-04-22-0: Bugfix:    Minor fix with usermapping(5)
                 Review:    RC

DT-2004-04-22-0: Enhancem.: o Further update to DRMAA Java binding
                 Changed:   DRMAA Java binding (maintrunk)

AH-2004-04-21-0: Bugfix:    Fix broken qalter -R y|n
                 Issue      982
                 Review:    AD

CR-2004-04-21-0: Bugfix:    Ensure that max. nr of dynamic event clients never
                            exceeds max. nr of file descriptors used for 
                            communication
                 Changed:   qmaster
                 Review:    SG

AS-2004-04-21-0: CVS        Created V60_beta2_target_{BRANCH,TAG}
-----------------------------------------------------------------

DT-2004-04-21-0: Enhancem.: o Streamlined event master locking
                            o Did various cosmetic fixes
                            o Added script for submiting multiple simultaneous
                              qsubs
                 Changed:   EVM, cull, qmaster, GDI, JAPI, mirror, UTI, scripts
                 Review:    SG, AD

MD-2004-04-21-2: Bugfix:    removed confusing text!
                 Changed:   rc-template

JG-2004-04-22-0: Enhancem.: distinst: Copy Berkeley DB backup/restore utilities
                            to utilbin.
                            Output diagnosis messages for Berkeley DB spooling
                            in log_level log_debug.
                 Bugfix:    Fixed aimk -spool-*
                 Review:    SG

MD-2004-04-21-1: Bugfix:    - if SGE_ROOT was already set, the scripts